--- a/site/config.toml
+++ b/site/config.toml
@@ -11,7 +11,10 @@ paginate = "10" # Number of posts per page
   authorbox = true
   pager = true
   post_meta = ["date", "categories"] # Order of post meta information
+  mainSections = ["development"]
 
+[Params.style.vars]
+  highlightColor = "#56acee" # Override highlight color
 
 [Params.sidebar]
   home = "right"   # Configure layout for home page
